[metadata]
name = dict
version = 1.0
url = https://github.com/bubblesub/dict
author = "Marcin Kurczewski"
author_email = rr-@sakuya.pl
description = "A command line toolkit for online dictionary lookups."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic

[options]
python_requires = >=3.9
package_dir = dict=dict
packages = find:

[options.package_data]
dict = py.typed

[options.extras_require]
test =
    pytest
    black
